--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,7 @@ jobs:
             "name": "buzzkill",
             "version": "1.0.0",
             "private": true,
+            "homepage": ".",
             "dependencies": {
               "react": "^18.2.0",
               "react-dom": "^18.2.0",
@@ -69,20 +70,19 @@ jobs:
         run: npm install
 
       - name: Create Tailwind config
-        run: |
-          npx tailwindcss init -p
+        run: npx tailwindcss init -p
 
       - name: Update tailwind.config.js
         run: |
           cat > tailwind.config.js << 'EOF'
           module.exports = {
-            content: ["./src/**/*.{js,jsx,ts,tsx}"],
+            content: ["./src/**/*.{js,jsx,ts,tsx}", "./public/index.html"],
             theme: { extend: {} },
             plugins: []
           }
           EOF
-          
-      - name: Create public files
+
+      - name: Create public/index.html
         run: |
           cat > public/index.html << 'EOF'
           <!DOCTYPE html>
@@ -92,6 +92,8 @@ jobs:
               <meta name="viewport" content="width=device-width, initial-scale=1" />
               <meta name="theme-color" content="#0f172a" />
               <meta name="description" content="BuzzKill - Daily corporate jargon puzzle game" />
+              <meta property="og:title" content="BuzzKill - Decode Corporate BS" />
+              <meta property="og:description" content="Daily corporate jargon puzzle game" />
               <title>BuzzKill - Decode Corporate BS</title>
             </head>
             <body>
@@ -101,7 +103,48 @@ jobs:
           </html>
           EOF
 
-      - name: Create App.js
+      - name: Create src/index.css
+        run: |
+          cat > src/index.css << 'EOF'
+          @tailwind base;
+          @tailwind components;
+          @tailwind utilities;
+
+          * {
+            box-sizing: border-box;
+          }
+
+          body {
+            margin: 0;
+            padding: 0;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+              'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+          }
+
+          #root {
+            min-height: 100vh;
+          }
+          EOF
+
+      - name: Create src/index.js
+        run: |
+          cat > src/index.js << 'EOF'
+          import React from 'react';
+          import ReactDOM from 'react-dom/client';
+          import './index.css';
+          import App from './App';
+
+          const root = ReactDOM.createRoot(document.getElementById('root'));
+          root.render(
+            <React.StrictMode>
+              <App />
+            </React.StrictMode>
+          );
+          EOF
+
+      - name: Create src/App.js
         run: |
           cat > src/App.js << 'APPEOF'
           import React, { useState, useEffect } from 'react';
@@ -237,7 +280,16 @@ jobs:
               setGameState('playing');
             };
 
-            if (!currentJargon) return <div className="min-h-screen bg-gradient-to-br from-slate-900 to-slate-800 flex items-center justify-center text-white">Loading...</div>;
+            if (!currentJargon) {
+              return (
+                <div className="min-h-screen bg-gradient-to-br from-slate-900 to-slate-800 flex items-center justify-center text-white">
+                  <div className="text-center">
+                    <div className="w-12 h-12 border-4 border-yellow-400 border-t-transparent rounded-full animate-spin mx-auto mb-4"></div>
+                    <p className="text-slate-400">Loading your daily dose of corporate BS...</p>
+                  </div>
+                </div>
+              );
+            }
 
             return (
               <div className="min-h-screen bg-gradient-to-br from-slate-900 to-slate-800 text-white p-4">
@@ -284,7 +336,7 @@ jobs:
                         {gameState === 'playing' && (
                           <div className="space-y-4">
                             <div className="flex gap-2">
-                              <input type="text" value={guess} onChange={(e) => setGuess(e.target.value.toUpperCase())} onKeyPress={(e) => e.key === 'Enter' && handleGuess()} placeholder="Type your guess..." className="flex-1 bg-slate-700 text-white px-4 py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400" maxLength={50} autoFocus />
+                              <input type="text" value={guess} onChange={(e) => setGuess(e.target.value.toUpperCase())} onKeyDown={(e) => e.key === 'Enter' && handleGuess()} placeholder="Type your guess..." className="flex-1 bg-slate-700 text-white px-4 py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400" maxLength={50} autoFocus />
                               <button onClick={handleGuess} className="bg-yellow-500 hover:bg-yellow-600 text-slate-900 px-6 py-3 rounded-lg font-bold transition-colors">Guess</button>
                             </div>
                             <div className="text-center text-slate-400 text-sm">{guesses.length}/{config.tries} tries used</div>
@@ -337,28 +389,8 @@ jobs:
           export default App;
           APPEOF
 
-      - name: Create index.css
-        run: |
-          cat > src/index.css << 'EOF'
-          @tailwind base;
-          @tailwind components;
-          @tailwind utilities;
-          body { margin: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif; }
-          EOF
-
-      - name: Create index.js
-        run: |
-          cat > src/index.js << 'EOF'
-          import React from 'react';
-          import ReactDOM from 'react-dom/client';
-          import './index.css';
-          import App from './App';
-          const root = ReactDOM.createRoot(document.getElementById('root'));
-          root.render(<React.StrictMode><App /></React.StrictMode>);
-          EOF
-
       - name: Build
-        run: npm run build
+        run: CI=false npm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
