--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -189,6 +189,16 @@ jobs:
             ]
           };
 
+          const AI_GIFS = [
+            'https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExNnloNWYxOHdmdWVvOWh1NTI4NWRoZXJvMGRrOHB6NXJqbGt1M3BuciZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/RIpfOTmeHqtsZhWN9Y/giphy.gif', // Placeholder 1
+            'https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExMjBpNTcyc3VtNDFqOGk5bWFsZnR3eHQxYjF1cXlzd2huZGdmNml4OCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/JsJvoP37bu8yhM8QYq/giphy.gif', // Placeholder 2
+            'https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExZzM1ZGlrc3NxbndraTlvYmRuMjlweTV5eG9vcjl6NnowczlkNnQwbyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/SnbwVKTj0vBQSK47us/giphy.gif', // Placeholder 3
+            'https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExMXF5b3NtNjBhbHM0dHkxeHF0aWl1aGJpNDg2MjhzZDE4NDVmNGx1eiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ckJF143W1gBS8Hk833/giphy.gif', // Placeholder 4 
+            'https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3cWdtdzlzOHVsd3g4b3QxdjdvbDlmMXdoeTFiNGhzdWVqMnRiMm51aCZlcD12MV9naWZzX3JlbGF0ZWQmY3Q9Zw/g3IOdZ7y7R4bgw3lfK/giphy.gif', // Placeholder 5 
+            'https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExdTQydGp5d3pyeDBtb21oZXlieDV1NzJqbDl5YmJhN2w4cG9ueGloMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/5PSIkifXas9gE7PA53/giphy.gif', // Placeholder 6
+            'https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExem1uandvNDljaDE5eWxwemQ0MjdwNXB2bWM3MGwwcnJyeHYyNWdsMyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Ryd1lEbKHRkVdDRu3B/giphy.gif', // Placeholder 7
+          ];
+
           const DIFFICULTY_CONFIG = {
             monday: { tries: 8, hint: "Nightmare Mode - No help. Good luck.", category: false, firstLetter: false, vowels: false },
             tuesday: { tries: 7, hint: "Category revealed", category: true, firstLetter: false, vowels: false },
@@ -212,6 +222,9 @@ jobs:
             const [showGenerator, setShowGenerator] = useState(false);
             const [generatedJargon, setGeneratedJargon] = useState('');
             const [stats, setStats] = useState({ gamesPlayed: 0, gamesWon: 0, currentStreak: 0 });
+            // NEW STATE FOR GIF ANIMATION
+            const [showWinAnimation, setShowWinAnimation] = useState(false);
+            const [activeGif, setActiveGif] = useState(null);
 
             useEffect(() => {
               const days = ['sunday', 'monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday'];
@@ -295,6 +308,14 @@ jobs:
               if (cleanGuess === currentJargon.phrase.toUpperCase()) {
                 setGameState('won');
                 setStats(prev => ({ gamesPlayed: prev.gamesPlayed + 1, gamesWon: prev.gamesWon + 1, currentStreak: prev.currentStreak + 1 }));
+
+                // Trigger GIF Animation
+                const randomGif = AI_GIFS[Math.floor(Math.random() * AI_GIFS.length)];
+                setActiveGif(randomGif);
+                setShowWinAnimation(true);
+                // Hide the GIF after 4 seconds
+                setTimeout(() => setShowWinAnimation(false), 4000);
+
               } else if (newGuesses.length >= config.tries) {
                 setGameState('lost');
                 setStats(prev => ({ gamesPlayed: prev.gamesPlayed + 1, gamesWon: prev.gamesWon, currentStreak: 0 }));
@@ -351,11 +372,25 @@ jobs:
             }
 
             return (
-              <div className="min-h-screen bg-gradient-to-br from-slate-900 to-slate-800 text-white p-4">
+              <div className="min-h-screen bg-gradient-to-br from-slate-900 to-slate-800 text-white p-4 relative overflow-hidden">
+                
+                {/* GIF overlay component */}
+                {showWinAnimation && activeGif && (
+                  <div className="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-70 backdrop-blur-sm">
+                    <div className="text-center p-8 rounded-lg shadow-2xl animate-in fade-in zoom-in duration-300">
+                      <h2 className="text-4xl font-extrabold mb-4 bg-gradient-to-r from-emerald-400 to-cyan-400 bg-clip-text text-transparent">AI-CHIEVEMENT UNLOCKED!</h2>
+                      <img src={activeGif} alt="EYY EYE" className="w-full max-w-sm mx-auto rounded-lg shadow-lg border-4 border-cyan-400" />
+                      <p className="text-slate-300 text-xl mt-4">Congrats! You're one step closer to the future of work.</p>
+                    </div>
+                  </div>
+                )}
+                
+                {/* Main Content */}
                 <div className="max-w-2xl mx-auto">
                   <div className="text-center mb-8">
                     <h1 className="text-5xl font-bold mb-2 bg-gradient-to-r from-yellow-400 to-orange-500 bg-clip-text text-transparent">BuzzKill</h1>
-                    <p className="text-slate-300 mb-4">Decode the corporate BS</p>
+                    {/* UPDATED CHEEKY TAGLINE */}
+                    <p className="text-slate-300 mb-4">The only vibe-coded app that actually works.</p> 
                     <div className="flex justify-center gap-6 mb-4 text-sm">
                       <div className="flex items-center gap-2">
                         <Trophy className="w-4 h-4 text-cyan-400" />
@@ -370,14 +405,14 @@ jobs:
                     </div>
                   </div>
                   <div className="flex gap-2 mb-6 bg-slate-800 p-1 rounded-lg">
-                    <button onClick={() => setShowGenerator(false)} className={"flex-1 py-2 px-4 rounded-md transition-colors font-medium " + (!showGenerator ? 'bg-slate-700 text-white shadow-lg shadow-slate-900/50' : 'text-slate-300 hover:text-cyan-400')}>Daily Challenge</button>
-                    <button onClick={() => setShowGenerator(true)} className={"flex-1 py-2 px-4 rounded-md transition-colors font-medium " + (showGenerator ? 'bg-slate-700 text-white shadow-lg shadow-slate-900/50' : 'text-slate-300 hover:text-cyan-400')}><Zap className="inline w-4 h-4 mr-1" />Jargon Generator</button>
+                    {/* UPDATED BUTTON TEXT */}
+                    <button onClick={() => setShowGenerator(false)} className={"flex-1 py-2 px-4 rounded-md transition-colors font-medium " + (!showGenerator ? 'bg-slate-700 text-white shadow-lg shadow-slate-900/50' : 'text-slate-300 hover:text-cyan-400')}>The Daily Digest</button>
+                    <button onClick={() => setShowGenerator(true)} className={"flex-1 py-2 px-4 rounded-md transition-colors font-medium " + (showGenerator ? 'bg-slate-700 text-white shadow-lg shadow-slate-900/50' : 'text-slate-300 hover:text-cyan-400')}><Zap className="inline w-4 h-4 mr-1" />Email Filler AI</button>
                   </div>
                   {!showGenerator ? (
                     <>
                       <div className="bg-slate-800 rounded-xl p-6 mb-6 shadow-2xl shadow-slate-900/70 border border-slate-700">
                         <div className="text-center mb-6">
-                          {/* Increased font size for masked phrase */}
                           <div className="text-4xl font-mono tracking-widest text-cyan-400 mb-4">{getMaskedPhrase()}</div>
                           {config.category && <div className="text-sm text-slate-300">Category: <span className="text-cyan-400 font-medium">{currentJargon.category}</span></div>}
                         </div>
@@ -386,7 +421,6 @@ jobs:
                             <div key={idx} className="flex gap-1 justify-center flex-wrap">
                               {g.split('').map((letter, i) => {
                                 if (letter === ' ') return <div key={i} className="w-2"></div>;
-                                // Use position from clean guess for correct state coloring
                                 const position = g.slice(0, i).replace(/\s/g, '').length;
                                 const state = getTileState(letter, position);
                                 return <div key={i} className={"w-8 h-8 md:w-10 md:h-10 transition-all duration-150 flex items-center justify-center font-bold text-lg rounded-md " + (state === 'green' ? 'bg-emerald-600' : state === 'yellow' ? 'bg-yellow-600' : 'bg-slate-600')}>{letter}</div>;
@@ -397,9 +431,9 @@ jobs:
                         {gameState === 'playing' && (
                           <div className="space-y-4">
                             <div className="flex gap-2">
-                              {/* Added disabled state for button */}
                               <input type="text" value={guess} onChange={(e) => setGuess(e.target.value.toUpperCase())} onKeyDown={(e) => e.key === 'Enter' && handleGuess()} placeholder="Type your guess..." className="flex-1 bg-slate-700 text-white px-4 py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-cyan-400 transition-shadow" maxLength={50} autoFocus />
-                              <button onClick={handleGuess} disabled={guess.trim().length === 0} className="bg-yellow-500 hover:bg-yellow-600 text-slate-900 px-6 py-3 rounded-lg font-bold transition-colors disabled:opacity-50 disabled:cursor-not-allowed">Guess</button>
+                              {/* UPDATED BUTTON TEXT */}
+                              <button onClick={handleGuess} disabled={guess.trim().length === 0} className="bg-yellow-500 hover:bg-yellow-600 text-slate-900 px-6 py-3 rounded-lg font-bold transition-colors disabled:opacity-50 disabled:cursor-not-allowed">Action Item</button>
                             </div>
                             <div className="text-center text-slate-300 text-sm">{guesses.length}/{config.tries} tries used</div>
                           </div>
@@ -408,11 +442,9 @@ jobs:
                       {gameState !== 'playing' && (
                         <div className="bg-gradient-to-br from-slate-700 to-slate-800 rounded-xl p-6 mb-6 border-2 border-cyan-400 shadow-2xl shadow-cyan-900/50">
                           <div className="text-center mb-4">
-                            {/* Changed win color to emerald */}
                             <h2 className="text-2xl font-bold text-emerald-400 mb-2">{gameState === 'won' ? '🎯 Decoded!' : '💼 The Answer'}</h2>
                             <div className="text-3xl font-bold mb-4 text-white">{currentJargon.phrase}</div>
                           </div>
-                          {/* Emphasized translation with lighter background */}
                           <div className="space-y-3 text-left">
                             <div className="bg-slate-700 rounded-lg p-4 mb-3 border border-slate-600">
                                 <span className="text-slate-300 text-sm">Translation:</span>
@@ -448,7 +480,8 @@ jobs:
                     </div>
                   )}
                   <div className="text-center text-slate-500 text-xs mt-8">
-                    <p>BuzzKill • Decode corporate jargon daily</p>
+                    {/* UPDATED FOOTER TEXT */}
+                    <p>BuzzKill • snt fm blkbry, xkyuz tie-poz </p>
                   </div>
                 </div>
               </div>
